--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+        <h>NAOリーマン紹介ページ</h>
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
@@ -26,10 +26,10 @@
       <h1>NAOリーマン<br>LEARN TO BE CREATIVE.</h1>
       <p>NAOリーマンのHP。<br>ウェブページを作成中。</p>
       <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
+        <a href="#" class="btn signup">Instagramを見る</a>
         <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
+        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookを見る</a>
+        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterを見る</a>
       </div>
     </div>
   </div>
@@ -74,7 +74,7 @@
   <div class="message-wrapper">
     <div class="container">
       <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
+        <h2>さぁ、あなたもプログラミングを学んでみませんか?</h2>
         <h3>Let's learn to code, learn to be creative!</h3>
       </div>
       <span class="btn message">さっそく開発する</span>
